src/main/antlr3/com/soebes/subversion/pbac/parser/output/SAFPParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g 2010-03-11 19:29:35

	package com.soebes.subversion.pbac.parser;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class SAFPParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NL", "EQUAL", "ID", "GROUPS", "ALIASES", "PATH", "WS", "CHARACTERS", "INTEGER_DIGITS", "'['", "']'", "':'", "'r'", "'R'", "'w'", "'W'", "'rw'", "'RW'", "','", "'&'", "'@'"
    };
    public static final int T__23=23;
    public static final int T__20=20;
    public static final int INTEGER_DIGITS=12;
    public static final int WS=10;
    public static final int T__13=13;
    public static final int T__21=21;
    public static final int T__19=19;
    public static final int T__14=14;
    public static final int T__22=22;
    public static final int GROUPS=7;
    public static final int NL=4;
    public static final int EQUAL=5;
    public static final int T__17=17;
    public static final int ALIASES=8;
    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__24=24;
    public static final int CHARACTERS=11;
    public static final int T__18=18;
    public static final int T__15=15;
    public static final int PATH=9;
    public static final int ID=6;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "group", "statement", "permission_write", "groups", 
        "permission_nothing", "repository", "groupreference", "permissionrule", 
        "repositorypath", "prog", "sectiongroup", "repos", "userreference", 
        "groupuserreference", "useraliasdefinition", "useralias", "permission", 
        "userpermission", "aliasreference", "permission_read_write", "sectionaliases", 
        "permission_read", "alias", "groupuserdefinition", "sectionrepository", 
        "grouppermission", "aliases"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public SAFPParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public SAFPParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public SAFPParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return SAFPParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g"; }






    // $ANTLR start "prog"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:29:1: prog : ( statement )* ;
    public final void prog() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "prog");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(29, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:30:2: ( ( statement )* )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:30:4: ( statement )*
            {
            dbg.location(30,4);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:30:4: ( statement )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==13) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:30:5: statement
            	    {
            	    dbg.location(30,5);
            	    pushFollow(FOLLOW_statement_in_prog54);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(30, 16);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "prog");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "statement"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:32:1: statement : ( groups | repos | aliases );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(32, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:33:2: ( groups | repos | aliases )
            int alt2=3;
            try { dbg.enterDecision(2);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==13) ) {
                switch ( input.LA(2) ) {
                case GROUPS:
                    {
                    alt2=1;
                    }
                    break;
                case ALIASES:
                    {
                    alt2=3;
                    }
                    break;
                case ID:
                case PATH:
                    {
                    alt2=2;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:33:4: groups
                    {
                    dbg.location(33,4);
                    pushFollow(FOLLOW_groups_in_statement65);
                    groups();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:34:4: repos
                    {
                    dbg.location(34,4);
                    pushFollow(FOLLOW_repos_in_statement70);
                    repos();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:35:4: aliases
                    {
                    dbg.location(35,4);
                    pushFollow(FOLLOW_aliases_in_statement75);
                    aliases();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(36, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "groups"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:38:1: groups : sectiongroup NL ( group EQUAL groupuserdefinition NL )* ;
    public final void groups() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "groups");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(38, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:39:2: ( sectiongroup NL ( group EQUAL groupuserdefinition NL )* )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:39:4: sectiongroup NL ( group EQUAL groupuserdefinition NL )*
            {
            dbg.location(39,4);
            pushFollow(FOLLOW_sectiongroup_in_groups86);
            sectiongroup();

            state._fsp--;

            dbg.location(39,17);
            match(input,NL,FOLLOW_NL_in_groups88); 
            dbg.location(39,20);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:39:20: ( group EQUAL groupuserdefinition NL )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:39:21: group EQUAL groupuserdefinition NL
            	    {
            	    dbg.location(39,21);
            	    pushFollow(FOLLOW_group_in_groups91);
            	    group();

            	    state._fsp--;

            	    dbg.location(39,27);
            	    match(input,EQUAL,FOLLOW_EQUAL_in_groups93); 
            	    dbg.location(39,33);
            	    pushFollow(FOLLOW_groupuserdefinition_in_groups95);
            	    groupuserdefinition();

            	    state._fsp--;

            	    dbg.location(39,53);
            	    match(input,NL,FOLLOW_NL_in_groups97); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(40, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "groups");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "groups"


    // $ANTLR start "repos"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:42:1: repos : sectionrepository NL permissionrule ( NL )? ( permissionrule ( NL )? )* ;
    public final void repos() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "repos");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(42, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:2: ( sectionrepository NL permissionrule ( NL )? ( permissionrule ( NL )? )* )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:4: sectionrepository NL permissionrule ( NL )? ( permissionrule ( NL )? )*
            {
            dbg.location(43,4);
            pushFollow(FOLLOW_sectionrepository_in_repos110);
            sectionrepository();

            state._fsp--;

            dbg.location(43,22);
            match(input,NL,FOLLOW_NL_in_repos112); 
            dbg.location(43,25);
            pushFollow(FOLLOW_permissionrule_in_repos114);
            permissionrule();

            state._fsp--;

            dbg.location(43,40);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:40: ( NL )?
            int alt4=2;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==NL) ) {
                alt4=1;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:40: NL
                    {
                    dbg.location(43,40);
                    match(input,NL,FOLLOW_NL_in_repos116); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}

            dbg.location(43,44);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:44: ( permissionrule ( NL )? )*
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6);

                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID||LA6_0==24) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:45: permissionrule ( NL )?
            	    {
            	    dbg.location(43,45);
            	    pushFollow(FOLLOW_permissionrule_in_repos120);
            	    permissionrule();

            	    state._fsp--;

            	    dbg.location(43,60);
            	    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:60: ( NL )?
            	    int alt5=2;
            	    try { dbg.enterSubRule(5);
            	    try { dbg.enterDecision(5);

            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0==NL) ) {
            	        alt5=1;
            	    }
            	    } finally {dbg.exitDecision(5);}

            	    switch (alt5) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:43:60: NL
            	            {
            	            dbg.location(43,60);
            	            match(input,NL,FOLLOW_NL_in_repos122); 

            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(5);}


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);
            } finally {dbg.exitSubRule(6);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(44, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "repos");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "repos"


    // $ANTLR start "aliases"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:46:1: aliases : sectionaliases NL ( alias EQUAL useraliasdefinition NL )* ;
    public final void aliases() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "aliases");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(46, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:47:2: ( sectionaliases NL ( alias EQUAL useraliasdefinition NL )* )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:47:4: sectionaliases NL ( alias EQUAL useraliasdefinition NL )*
            {
            dbg.location(47,4);
            pushFollow(FOLLOW_sectionaliases_in_aliases136);
            sectionaliases();

            state._fsp--;

            dbg.location(47,19);
            match(input,NL,FOLLOW_NL_in_aliases138); 
            dbg.location(47,22);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:47:22: ( alias EQUAL useraliasdefinition NL )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==ID) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:47:23: alias EQUAL useraliasdefinition NL
            	    {
            	    dbg.location(47,23);
            	    pushFollow(FOLLOW_alias_in_aliases141);
            	    alias();

            	    state._fsp--;

            	    dbg.location(47,29);
            	    match(input,EQUAL,FOLLOW_EQUAL_in_aliases143); 
            	    dbg.location(47,35);
            	    pushFollow(FOLLOW_useraliasdefinition_in_aliases145);
            	    useraliasdefinition();

            	    state._fsp--;

            	    dbg.location(47,55);
            	    match(input,NL,FOLLOW_NL_in_aliases147); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(48, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "aliases");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "aliases"


    // $ANTLR start "group"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:50:1: group : ID ;
    public final void group() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "group");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(50, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:51:2: ( ID )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:51:4: ID
            {
            dbg.location(51,4);
            match(input,ID,FOLLOW_ID_in_group160); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(52, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "group");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "group"


    // $ANTLR start "alias"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:54:1: alias : ID ;
    public final void alias() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "alias");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(54, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:55:2: ( ID )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:55:4: ID
            {
            dbg.location(55,4);
            match(input,ID,FOLLOW_ID_in_alias171); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(56, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "alias");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "alias"


    // $ANTLR start "sectiongroup"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:58:1: sectiongroup : '[' GROUPS ']' ;
    public final void sectiongroup() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "sectiongroup");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(58, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:59:2: ( '[' GROUPS ']' )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:59:4: '[' GROUPS ']'
            {
            dbg.location(59,4);
            match(input,13,FOLLOW_13_in_sectiongroup182); 
            dbg.location(59,8);
            match(input,GROUPS,FOLLOW_GROUPS_in_sectiongroup184); 
            dbg.location(59,15);
            match(input,14,FOLLOW_14_in_sectiongroup186); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(60, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "sectiongroup");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "sectiongroup"


    // $ANTLR start "sectionaliases"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:62:1: sectionaliases : '[' ALIASES ']' ;
    public final void sectionaliases() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "sectionaliases");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(62, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:63:2: ( '[' ALIASES ']' )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:63:4: '[' ALIASES ']'
            {
            dbg.location(63,4);
            match(input,13,FOLLOW_13_in_sectionaliases198); 
            dbg.location(63,8);
            match(input,ALIASES,FOLLOW_ALIASES_in_sectionaliases200); 
            dbg.location(63,16);
            match(input,14,FOLLOW_14_in_sectionaliases202); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(64, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "sectionaliases");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "sectionaliases"


    // $ANTLR start "sectionrepository"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:66:1: sectionrepository : '[' repository repositorypath ']' ;
    public final void sectionrepository() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "sectionrepository");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(66, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:67:2: ( '[' repository repositorypath ']' )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:67:4: '[' repository repositorypath ']'
            {
            dbg.location(67,4);
            match(input,13,FOLLOW_13_in_sectionrepository213); 
            dbg.location(67,8);
            pushFollow(FOLLOW_repository_in_sectionrepository215);
            repository();

            state._fsp--;

            dbg.location(67,19);
            pushFollow(FOLLOW_repositorypath_in_sectionrepository217);
            repositorypath();

            state._fsp--;

            dbg.location(67,34);
            match(input,14,FOLLOW_14_in_sectionrepository219); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(68, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "sectionrepository");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "sectionrepository"


    // $ANTLR start "repository"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:70:1: repository : ( ID ':' )? ;
    public final void repository() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "repository");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(70, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:71:2: ( ( ID ':' )? )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:71:4: ( ID ':' )?
            {
            dbg.location(71,4);
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:71:4: ( ID ':' )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:71:5: ID ':'
                    {
                    dbg.location(71,5);
                    match(input,ID,FOLLOW_ID_in_repository232); 
                    dbg.location(71,8);
                    match(input,15,FOLLOW_15_in_repository234); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(72, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "repository");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "repository"


    // $ANTLR start "repositorypath"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:74:1: repositorypath : PATH ;
    public final void repositorypath() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "repositorypath");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(74, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:75:2: ( PATH )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:75:4: PATH
            {
            dbg.location(75,4);
            match(input,PATH,FOLLOW_PATH_in_repositorypath247); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(76, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "repositorypath");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "repositorypath"


    // $ANTLR start "permissionrule"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:78:1: permissionrule : ( userpermission | grouppermission );
    public final void permissionrule() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "permissionrule");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(78, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:79:2: ( userpermission | grouppermission )
            int alt9=2;
            try { dbg.enterDecision(9);

            int LA9_0 = input.LA(1);

            if ( (LA9_0==ID) ) {
                alt9=1;
            }
            else if ( (LA9_0==24) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:79:4: userpermission
                    {
                    dbg.location(79,4);
                    pushFollow(FOLLOW_userpermission_in_permissionrule258);
                    userpermission();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:80:4: grouppermission
                    {
                    dbg.location(80,4);
                    pushFollow(FOLLOW_grouppermission_in_permissionrule263);
                    grouppermission();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(81, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "permissionrule");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "permissionrule"


    // $ANTLR start "userpermission"
    // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:83:1: userpermission : ID EQUAL permission ;
    public final void userpermission() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "userpermission");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(83, 1);

        try {
            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:84:2: ( ID EQUAL permission )
            dbg.enterAlt(1);

            // /Users/km/ws-git/pbac/src/main/antlr3/com/soebes/subversion/pbac/parser/SAFP.g:84:4: ID EQUAL permission
            {
            dbg.location(84,4);
            match(input,ID,FOLLOW_ID_in_userpermission274); 
            dbg.location(84,7);
            match(input,EQUAL,FOLLOW_EQUAL_in_userpermission276); 
            dbg.location(84,13);
            pushFollow(FOLLOW_permission_in_userpermission278);
            permission();

            state._fsp--;


            }
